Update README for clarity (installation process)