@@ -16,10 +16,20 @@ A lightweight, feature-rich music player built with JavaFx that provides a moder
 * [Java](https://www.oracle.com/my/java/technologies/downloads/) 17 or higher
 * [JavaFX 21.0.7](https://gluonhq.com/products/javafx/) or later
 
-## Installation
+## Installation (technical users)
 1. Clone the repo
 2. Build the project with your preferred IDE
 3. Run the application
+
+## Installation (non-technical users)
+1. Install Java 17 or higher. 
+2. Download JavaFX 21.0.7 or later. Make sure to unzip and store the files in your preferred directory.
+3. Download the `MusicPlayer_v1.0.0.jar` via this [link](https://drive.google.com/file/d/1oO1C6_h_iUUmbf0TX8XzGZabsTd9FQ6z/view?usp=sharing).
+4. Open your command prompt and navigate to the directory where the jar file is located.
+5. Type in the following command:
+```
+java --module-path /path/to/your/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml,javafx.media,javafx.graphics,javafx.web -jar MusicPlayer_v1.0.0.jar
+```
 
 ## Future improvements
 - Playlist management
